dumped the crappy alloc code.
send_channel is now varargs. MAKE SURE NOT TO PASS A USER MODIFIABLE BUFFER AS THE FORMAT!
e.g.
instead of
send_channel("poop", user_input);
use
send_channel("poop", "%s", user_input);
Why? lookup printf() exploits on google. I set send_channel's format arg to be a const, which
should help.

took out a few more tprintf()'s.
modified send_channel(blah, tprintf(...)) to send_channel(blah, ...)

Removed all outstanding compiler warnings
added _GNU_SOURCE to config.h

dropped the nhashtab from player_c and replaced it with an rbtree.

dropped roundf for nearbyintf in mine.c
fixed some typos.

git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@248 e60b412a-5d77-420b-80c2-6cef64185626

--- a/Makefile.in
+++ b/Makefile.in
@@ -55,7 +55,6 @@ MUX_OBJECTS    = src/alloc.o       \
                  src/netcommon.o   \
                  src/object.o      \
                  src/player.o      \
-                 src/player_c.o    \
                  src/powers.o      \
                  src/predicates.o  \
                  src/python.o      \
@@ -174,7 +173,14 @@ ALLSRCS = $(ALLOBJS:.o=.c)
 
 TARGETS = src/netmux src/mkindx src/unsplit src/slave
 
-all: $(TARGETS)
+
+
+
+all: Makefile $(TARGETS)
+
+Makefile: Makefile.dist configure.in Makefile.in
+	make -f Makefile.dist clean
+	exec make -f Makefile.dist
 
 # Install copies the 'game' directory to game.run, after trying to get all
 # files from svn. If the svn command fails, we don't really care.
